# ClearClaim

./: Problem statement and solution.md  README.md  README.txt  docker-compose.yml  market oppurtunity.md  steps.md  techincal_details.md
backend/: .env  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  agent_factory.py  base_agent.py  claim_agent.py  goal_builder.py  mock_agent.py  payer_registry.py  result_parser.py  tinyfish_agent.py
backend/app/api/routes/: auth.py  claims.py  health.py  patients.py  tasks.py
backend/app/core/: __init__.py  dependencies.py  security.py
backend/app/models/: __init__.py  claim.py  patient.py  task.py  user.py
backend/app/services/: agent_service.py  claim_service.py  mail_service.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/clearclaim_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: seed_demo_data.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/analytics/: page.tsx
frontend/components/: .gitkeep  LandingPage.tsx  LiveStreamPanel.tsx  Sidebar.tsx  SlidePanel.tsx  StatCard.tsx  StatusBadge.tsx  TaskTypeBadge.tsx  ToastProvider.tsx  TopBar.tsx
frontend/lib/: api.ts
(+125 files in other folders)
